Reduce photo height and width to fix distortion of photos

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -46,6 +46,7 @@
 .pointer {
   color: #db4839;
   font-size: 25px;
+  margin-right: 15px;
 }
 
 .instructions {
